v2.0.0-beta.5 - Fix: When Top Menu colors are changed, don't apply the new colors to the bottom menu on mobile

--- a/themes/Clean/less/humhub/mobile.less
+++ b/themes/Clean/less/humhub/mobile.less
@@ -94,8 +94,14 @@
           height: auto;
           line-height: 12px !important;
           font-size: 10px;
+          color: var(--primary);
 
-          &:hover {
+          &.active,
+          &:hover,
+          &:active,
+          &:focus {
+            background-color: var(--primary) !important;
+            color: var(--background-color-secondary) !important;
             border-bottom: none !important;
           }
 
